--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Robo Web Crawler",
+  "name": "Robo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,9 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "puppeteer": "^2.0.0",
-    "puppeteer-core": "^2.0.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "puppeteer-core": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
